--- a/responsive.html
+++ b/responsive.html
@@ -14,7 +14,7 @@
                 <img src="images/profile_toyota.png" alt="inni photo profile" width="20" height="20">
             </div>
             <div class="col-12 col-sm-8" style="background-color: red;">
-                <h1>Febrian Aditya</h1>
+                <h1>Febrian Aditya Ramadhan</h1>
                 <h4>Frontend Developer</h4>
                 <hr>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque et laoreet ex. Nam rutrum maximus libero quis congue. Pellentesque bibendum non mauris eu tempus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam pretium eu magna nec dictum. Integer eu mi tincidunt diam pulvinar ornare bibendum a nisi. Maecenas tincidunt risus non vulputate venenatis. Aliquam tincidunt sem eu massa volutpat porta egestas mattis ipsum.</p>
